(lang dune 3.15)

(name combo)

(generate_opam_files true)

(source
 (github svishnus/combo))

(authors "Sundara Vishnu Satish")

(maintainers "Sundara Vishnu Satish")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name combo)
 (synopsis "Logic Puzzles")
 (description "from To Mock a Mockingbird")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
